fix gap at bottom

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ a[rel="tag"]:after {
 width:100%;
 }
 #team{
-     min-height: 100%;
+     /*min-height: 100%;*/
     height: auto;
 
 }
@@ -151,7 +151,6 @@ width:100%;
     display:inline-block;
     white-space:normal;
 vertical-align:top;
-
 }
 
 
